# Real-Time_Torque_Prediction_for_Adaptive_Exoskeleton_Control

./: README.md
compilation/: CMakeLists.txt  package.xml
compilation/msg/: hdEMG.msg
compilation/nodes/: QC_node.py  qc_stream_node.py
compilation/src/talker_listener/: hdEMG_DCNN.py  listener.py  qc_predict.py  qc_stream.py
h3_launch/: CMakeLists.txt  package.xml
h3_launch/launch/: h3_launch_torque_control.launch
h3_msgs/: CMakeLists.txt  package.xml
h3_msgs/msg/: State.msg  TaskCommand.msg
h3_msgs/srv/: ControlType.srv  DataRecording.srv  Joint.srv  TriggerOutput.srv
talker_listener/: CMakeLists.txt  package.xml  setup.py
talker_listener/launch/: h3_launch.launch
talker_listener/msg/: hdemg.msg
talker_listener/nodes/: QC_node.py  QC_node3.py  QC_node_cst.py  QC_node_emg.py  calibrate.py  calibrate_cst.py  calibrate_emg.py  emg_stream.py  qc_stream_node.py  qc_stream_node_100.py  qc_stream_node_512.py  torque_stream.py
talker_listener/src/talker_listener/: hdEMG_DCNN.py  hdEMG_validate.py  offline_emg.csv  qc_communication.py  qc_predict.py  talker.py  test_script.py
talker_listener/srv/: calibration.srv
